src/snapshots/nbx__output_snapshots__ndjson_line_streamed_device@schema_v1.snap
---
source: src/output_snapshots.rs
assertion_line: 149
expression: line
---
{"data":{"id":1,"name":"srv-db-01"},"nbxVersion":"[redacted]","schemaVersion":1}
