src/snapshots/nbx__output_snapshots__table_devices_page@schema_v1.snap
---
source: src/output_snapshots.rs
assertion_line: 166
expression: rendered
---
+----+-----------+---------+
| id | name      | status  |
+==========================+
| 1  | srv-db-01 | active  |
|----+-----------+---------|
| 2  | srv-db-02 | planned |
+----+-----------+---------+
count: 2
